--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,9 +3,13 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --black-gradient: linear-gradient(
+    144.39deg,
+    #ffffff -278.56%,
+    #6d6d6d -78.47%,
+    #11101d 91.61%
+  );
+  --card-shadow: 0px 20px 100px -10px rgba(66, 71, 91, 0.1);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -59,6 +63,7 @@ body {
 .feature-card:hover {
   background: var(--black-gradient);
   box-shadow: var(--card-shadow);
+  display: flex;
 }
 
 :root {
@@ -79,6 +84,45 @@ body {
     #11101d 91.61%
   );
 }
+.client:hover {
+  filter: invert(99%) sepia(30%) saturate(6598%) hue-rotate(144deg)
+    brightness(100%) contrast(80%);
+}
+.bg-black-gradient {
+  background: linear-gradient(
+    144.39deg,
+    #ffffff -278.56%,
+    #6d6d6d -78.47%,
+    #11101d 91.61%
+  );
+}
+
+.sidebar {
+  -webkit-animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+@-webkit-keyframes slide-top {
+  0% {
+    -webkit-transform: translateY(100px);
+    transform: translateY(100px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@keyframes slide-top {
+  0% {
+    -webkit-transform: translateY(100px);
+    transform: translateY(100px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
 
 .feedback-card {
   background: transparent;
@@ -86,4 +130,43 @@ body {
 
 .feedback-card:hover {
   background: var(--black-gradient);
+}
+
+.feature-card:hover {
+  background: var(--black-gradient);
+  box-shadow: var(--card-shadow);
+}
+
+.feedback-container .feedback-card:last-child {
+  margin-right: 0px;
+}
+
+
+
+/* components/GlowingBorder.module.css */
+.glowBorder {
+  padding: 20px;
+  font-size: 20px;
+  cursor: pointer;
+  border: 2px solid transparent;
+  transition: border-color 0.3s ease-in-out;
+}
+
+
+
+.glowBorder:hover {
+  border-color: rgba(9, 151, 124, 0.1);
+  animation: glow-animation 1s infinite alternate;
+
+}
+
+
+
+@keyframes glow-animation {
+  0% {
+    opacity: 0.3;
+  }
+  100% {
+    opacity: 1;
+  }
 }
